2013-08-28  Pratik Solanki  <psolanki@apple.com>

        Document::elementSheet() should return a reference
        https://bugs.webkit.org/show_bug.cgi?id=120433

        Reviewed by Andreas Kling.

        Since elementSheet() always retruns a valid pointer, we can simply return a reference
        instead. Also rename m_elemSheet to m_elementSheet.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseInlineStyleDeclaration):
        * css/PropertySetCSSStyleDeclaration.cpp:
        (WebCore::InlineCSSStyleDeclaration::parentStyleSheet):
        * dom/Document.cpp:
        (WebCore::Document::~Document):
        (WebCore::Document::recalcStyle):
        (WebCore::Document::updateBaseURL):
        (WebCore::Document::elementSheet):
        * dom/Document.h:
        * dom/StyledElement.cpp:
        (WebCore::StyledElement::setInlineStyleFromString):
        (WebCore::StyledElement::setInlineStyleProperty):
        (WebCore::StyledElement::addSubresourceAttributeURLs):
        (WebCore::StyledElement::addPropertyToPresentationAttributeStyle):
        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyleSheetForInlineStyle::getStyleAttributeRanges):

2013-08-28  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r154586): Past names map should only be used when named item is empty
        https://bugs.webkit.org/show_bug.cgi?id=120432

        Reviewed by Anders Carlsson.

        Don't add the element from the past names map if we've found elements of the given name.

        Test: fast/forms/past-names-map-should-be-used-only-when-named-item-is-empty.html

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::getNamedElements):

2013-08-27  Ryosuke Niwa  <rniwa@webkit.org>

        Don't keep unassociated elements in the past names map
        https://bugs.webkit.org/show_bug.cgi?id=120328

        Reviewed by Darin Adler.
